test/TestPhases/typechecker/invalid/emptyLoop.blc
@[EntryPoint]
activity running()
    repeat
    end
end